@@ -1,3 +1,8 @@
+*SVN*
+
+* Add :env option to 'run' (and friends) so that you can specify environment variables to be injected into the new process' environment [Mathieu Lajugie]
+
+
 *1.4.0* (February 3, 2007)
 
 * Use the auth info for subversion more consistently [Jamis Buck]
@@ -24,9 +29,11 @@
 
 * Fix off-by-one bug in show_tasks width-computation [NeilW]
 
+
 *1.3.1* (January 5, 2007)
 
 * Fix connection problems when using gateways [Ezra Zygmuntowicz]
+
 
 *1.3.0* (December 23, 2006)
 
@@ -57,6 +64,7 @@
 * Added warning if password is prompted for and termios is not installed [John Labovitz]
 
 * Added :as option to sudo, so you can specify who the command is executed as [Mark Imbriaco]
+
 
 *1.2.0* (September 14, 2006)
 
